After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 736790 - faad: logical disjunction consecutive return, break statement unnecessary.
faad: logical disjunction consecutive return, break statement unnecessary.
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
1.x
Other Linux
: Normal normal
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-09-17 10:51 UTC by Anuj
Modified: 2014-09-23 17:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
faad: logical disjunction consecutive return, break statement unnecessary. (767 bytes, patch)
2014-09-17 10:51 UTC, Anuj
committed Details | Review

Description Anuj 2014-09-17 10:51:11 UTC
Created attachment 286358 [details] [review]
faad: logical disjunction consecutive return, break statement unnecessary.

In gstfaad.c consecutive return and break statements are unnecessary.
Comment 1 Sebastian Dröge (slomo) 2014-09-18 09:35:03 UTC
commit 8b180b85a264ea6a59d38c623ebd2fb21df9c6b4
Author: Anuj Jaiswal <anuj.jaiswal@samsung.com>
Date:   Wed Sep 17 15:50:23 2014 +0530

    faad: logical disjunction consecutive return, break unnecessary
    
    https://bugzilla.gnome.org/show_bug.cgi?id=736790
Comment 2 Luis de Bethencourt 2014-09-23 17:02:37 UTC
Well done Anuj :)