faad: logical disjunction consecutive return, break unnecessary

https://bugzilla.gnome.org/show_bug.cgi?id=736790